Fix #590 . On the Grader Report page, make blocks align left regardless of the layout setting for 'Location of the blocks' and remove css setting for grader table.  This allows the first column to remain visible when scrolling right.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -770,7 +770,7 @@ div.redirectmessage {
 }
 
 .path-grade-report-grader .gradeparent {
-    overflow: auto;
+    /* overflow: auto; */
 }
 
 .gradingform_guide .criterion .description {
